tests/wpt/tests/third_party/test262/test/language/expressions/assignmenttargettype/direct-primaryexpression-regularexpressionliteral.js
// This file was procedurally generated from the following sources:
// - src/assignment-target-type/primaryexpression-regularexpressionliteral.case
// - src/assignment-target-type/invalid/direct.template
/*---
description: PrimaryExpression RegularExpressionLiteral; Return invalid. (Direct assignment)
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    Direct assignment
---*/

$DONOTEVALUATE();

/1/ = 1;
